# furniture-designer-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  server.json
src/furniture_designer_mcp/: server.py
src/furniture_designer_mcp/engine/: bom_generator.py  cut_optimizer.py  design_store.py  designer.py  freecad_client.py  freecad_scripts.py  http_server.py  report_generator.py  section_mapper.py  spec_builder.py  spec_validator.py  structural_validator.py
src/furniture_designer_mcp/knowledge/: assembly_specs.py  brief_formatters.py  ergonomics.py  hardware.py  materials.py  structural_rules.py
src/furniture_designer_mcp/templates/: report_template.html
