[project]
name = "furniture-designer-mcp"
version = "0.1.1"
description = "MCP Server for professional furniture design — structural validation, cut optimization, BOM generation, and ergonomic standards."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.12.2",
    "aiohttp>=3.9.0",
]

[project.scripts]
furniture-designer-mcp = "furniture_designer_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
